2016-04-15  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Remove 'cmake$' from CPACK_SOURCE_IGNORE_FILES to
	avoid accidentally excluding custom CMake scripts from the tar ball.

2016-04-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 6.1+beta4.

2016-04-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the gsa 6.1+beta3 release.

	* CHANGES: Updated.

2016-04-14  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_graphics_base.js (fill_empty_fields): Set
	"~original" columns to empty string instead of 'N/A' and do not
	change columns with value 0.
	(filtered_list_url): Append new keyword instead of prepending so it
	works with criteria containing the "not" keyword.

2016-04-13  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_donut_chart.js (init): Remove color scale
	initialization.
	(generate): Initialize color scale using the type and value column name
	if it is still undefined.  Try getting scale color for original value
	if the current one does not work.

	* src/html/classic/js/gsa_graphics_base.js (gsa.field_color_scale): New
	function to get column-specific color scales.
	(BaseChartGenerator.prototype.scaleColor): Return undefined if color
	is not valid.

2016-04-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad.c (get_client_address): Fix stack bufferoverflow introduced
	in r24780. Can be triggered with: curl -k -H "X-Real-IP: `python -c
	'print "A"*300'`" https://localhost/omp?token=foo

2016-04-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (BAD_REQUEST_PAGE): New define.
	(request_handler): Send bad request page instead of dropping the
	connection when URL is bad, to keep MHD "Internal application error"
	warnings out of the logs.

2016-04-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (request_handler): Do the export check earlier, to save